buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'eclipse'

version = '2.0.0'
group = 'com.foxyas.changed_addon'
archivesBaseName = 'changed_addon'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.18.2'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    env {
        remapRefMap = true
    }
}

repositories {
	// Mod Location
    flatDir {
        dirs 'libs'
    }

    maven {
        url "https://cursemaven.com"
    }

    maven {
        name = "Changed"
        url = "https://raw.githubusercontent.com/LtxProgrammer/Changed-Minecraft-Mod/master/mcmodsrepo/"
    }
    maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.2.10'
    implementation fg.deobf("net.ltxprogrammer.changed:Changed-m1.18.2-f40.2.0:v0.12b")
    implementation fg.deobf("curse.maven:advanced-xray-256256:3712732")
    implementation fg.deobf("curse.maven:lightspeedmod-821790:4594803")
    implementation fg.deobf("curse.maven:forge-carpet-547361:3930877")
    implementation fg.deobf("curse.maven:rubidium-574856:4494903")
    implementation fg.deobf("curse.maven:custom-player-models-439870:4745218")
    
    compileOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.0.192:api")
    runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.0.192")
    
    //implementation files('libs/output.jar')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

apply from: 'mcreator.gradle'

